# canal

./: ::wq  :wq  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  TODO  canal  canal.cpp  cmake_install.cmake  compile_commands.json  o.c  o.cpp
.cache/clangd/index/: _double.cpp.694A6578E6CB38A3.idx  _float.cpp.2303EA2A9168544E.idx  access.cpp.FCDDB200C63B74BB.idx  analyzer.h.A22ECD2F883961BF.idx  call.cpp.8FEECE6B1EB4762C.idx  canal.cpp.16ECEF66E7B3B22C.idx  classifiers.cpp.0B1584D15EB4B4E6.idx  clone.cpp.8054E102A7817DBD.idx  clone.cpp.D21C37207A09F2C9.idx  cloneMax.cpp.4B7D44470C27C656.idx  comperator.cpp.C294EE877C512597.idx  container.h.4255C01CA1591F4D.idx  debugger.cpp.552E3F6E6BC205DD.idx  debugger.h.E39A0F9E3584C245.idx  dump_handler.cpp.8F50626B1BFC01D3.idx  equal.cpp.A1B71817836CAD2C.idx  file.cpp.6240CC538CEBB4B0.idx  function.cpp.D8EC4D3977588176.idx  function.h.304A96A4033FC8CD.idx  function_analyzer.cpp.5A4D7011FDE5192E.idx  function_finder.cpp.E90EFB04E9868E7F.idx  identifiers.cpp.4382625D3834451E.idx  if_stmt_analyzer.cpp.BA27946808E74031.idx  int_lit.cpp.F88DA15769FEC40B.idx  locals.cpp.E6E1314356F881FD.idx  longdouble.cpp.DB5E36CB79CF7861.idx  neg_dec_inc.cpp.42159908650FA869.idx  o.cpp.987A1EF41C02617D.idx  operation.cpp.5AA47EF9FA103F47.idx  operation.h.E91A117E6D15741F.idx  operation_stack.cpp.CFF6DDA5FF7F322C.idx  operation_stack.h.429FC9099B67136F.idx  pointer.cpp.247C12FB48DE5185.idx  print.cpp.8A7DA73452A8BA16.idx  print.cpp.C9CA75AD6B1AB4EA.idx  result.cpp.1E58218BBE4B6837.idx  result.h.5D990A3AA5A6504A.idx  ret.cpp.1E5527A98998EFA7.idx  root_operation.cpp.C5F5FA43D53A10DA.idx  root_scope.cpp.1CC321E21AE7087C.idx  (+23 more)
include/canal/: TODO  analyzer.h  container.h  debugger.h  file.h  function.h  operation.h  operation_stack.h  result.h  root_operation.h  root_scope.h  scheduler.h  scope.h  variable.h
scripts/: binaryOpGen.py  classMethodsGen.py  cloneVarGen.py  comperatorMethodsGen.py  operation_stackExplicitTemplate.py  operation_stackPushbackGen.py  pointerMethodsGen.py  shl_shr_gen.py  varComperator.py  vcontainer_emplaceback_gen.py
src/: CMakeLists.txt  Makefile  cmake_install.cmake
src/analyzer/: classifiers.cpp  dump_handler.cpp  function_analyzer.cpp  function_finder.cpp  if_stmt_analyzer.cpp  term_analyzer.cpp
src/container/: vectors.cpp
src/debugger/: debugger.cpp
src/operation/: access.cpp  call.cpp  clone.cpp  equal.cpp  int_lit.cpp  neg_dec_inc.cpp  operation.cpp  operation_stack.cpp  print.cpp  ret.cpp  root_operation.cpp  shl_shr.cpp  switch.cpp  var_push.cpp
src/result/: identifiers.cpp  locals.cpp  result.cpp
src/scheduler/: scheduler.cpp
src/scope/: file.cpp  function.cpp  root_scope.cpp  scope.cpp
src/variable/: _double.cpp  _float.cpp  clone.cpp  cloneMax.cpp  comperator.cpp  longdouble.cpp  pointer.cpp  print.cpp  shl_shr.cpp  signedchar.cpp  signedint.cpp  signedlong.cpp  signedlonglong.cpp  signedshort.cpp  unsignedchar.cpp  unsignedint.cpp  unsignedlong.cpp  unsignedlonglong.cpp  unsignedshort.cpp  variable.cpp  vcontainer.cpp
test/: root_operation.cpp  vcontainer.cpp
try/: _ast.cpp  _classes.cpp  _enum.cpp  _int.cpp  _vector.cpp  a.out  compile.cpp  new.cpp  pointer.cpp
try/clangAST/: function.c  o.c
